# unicorn

./: .gitignore  README.md
analyzers/conf/: fft_1.txt  fft_2.txt  fft_3.txt  fft_4.txt  global.txt  imageFiltering.txt  luDecomposition.txt  matrixMultiply.txt  matrixMultiplyBlas.txt  matrixTranspose.txt  matrixTranspose_1.txt  matrixTranspose_2.txt
analyzers/inc/: benchmark.h  graph.h
analyzers/source/code/inc/: analyzer.h  benchmark.h  graph.h
analyzers/source/code/src/: analyzer.cpp  benchmark.cpp  graph.cpp
analyzers/src/: benchmark.cpp  graph.cpp
install/: Makefile.in  README  config.h.in  configure  configure.ac  unicorn_distrib_rc.in
install/m4/: ax_cblas.m4  ax_check_cuda.m4  ax_mpi.m4
plotters/comparisonCharts/: generator.pl
plotters/profilerCharts/: generator.pl
plotters/timelineCharts/: generator.pl
scripts/: benchmark.pl  propSchedConf.txt  propSchedConfDevices.txt  propSchedConfPower.txt  sample.hosts  stealOverhead.pl  subtaskDistributionProfile.pl  syntheticLoadProfile.pl
source/code/inc/: pmAddressSpace.h  pmAffinityTable.h  pmAllocatorCollection.h  pmBase.h  pmCache.h  pmCallback.h  pmCallbackChain.h  pmCallbackUnit.h  pmCluster.h  pmCommand.h  pmCommunicator.h  pmController.h  pmCudaInterface.h  pmDataTypes.h  pmDataTypesHelper.h  pmDevicePool.h  pmDispatcherGPU.h  pmErrorDefinitions.h  pmEventTimeline.h  pmExecutionStub.h  pmHardware.h  pmHeavyOperations.h  pmInternalDefinitions.h  pmLogger.h  pmMemChunk.h  pmMemSection.h  pmMemoryDirectory.h  pmMemoryManager.h  pmNetwork.h  pmOpenCLManager.h  pmPoolAllocator.h  pmPreprocessorTask.h  pmPublicDefinitions.h  pmPublicUtilities.h  pmRangeAccessor.h  pmRedistributor.h  pmReducer.h  pmResourceLock.h  pmSafePriorityQueue.h  pmScheduler.h  (+16 more)
source/code/src/: pmAddressSpace.cpp  pmAffinityTable.cpp  pmAffinityTable.h  pmAllocatorCollection.cpp  pmBase.cpp  pmCache.cpp  pmCallback.cpp  pmCallbackChain.cpp  pmCallbackUnit.cpp  pmCluster.cpp  pmCommand.cpp  pmCommunicator.cpp  pmController.cpp  pmCudaInterface.cu  pmDataTypes.cpp  pmDevicePool.cpp  pmDispatcherCUDA.cu  pmDispatcherGPU.cpp  pmEventTimeline.cpp  pmExecutionStub.cpp  pmHardware.cpp  pmHeavyOperations.cpp  pmLogger.cpp  pmMemChunk.cpp  pmMemSection.cpp  pmMemoryDirectory.cpp  pmMemoryManager.cpp  pmNetwork.cpp  pmOpenCLManager.cpp  pmPoolAllocator.cpp  pmPreprocessorTask.cpp  pmPublicDefinitions.cpp  pmRangeAccessor.cpp  pmRedistributor.cpp  pmReducer.cpp  pmRegionAccessor.cpp  pmResourceLock.cpp  pmSafePriorityQueue.cpp  pmScheduler.cpp  pmSignalWait.cpp  (+15 more)
source/projectFiles/vs10/PMLIB/: PMLIB.sln  PMLIB.vcxproj  PMLIB.vcxproj.filters
source/projectFiles/vs9/PMLIB/: PMLIB.sln  PMLIB.vcproj  PMLIB.vcxproj  PMLIB.vcxproj.filters
source/projectFiles/xcode4.1/pmlib/pmlib/: pmlib-Prefix.pch  pmlib.cp  pmlib.h  pmlibPriv.h  pmlibTarget.xcconfig
source/projectFiles/xcode4.1/pmlib/pmlib.xcodeproj/: project.pbxproj
source/projectFiles/xcode4.1/pmlib/pmlib_ws.xcworkspace/: contents.xcworkspacedata
testSuite/common/source/code/inc/: commonAPI.h
testSuite/common/source/code/src/: commonAPI.cpp  commonAPICUDA.cu
testSuite/fft/source/code/inc/: fft.h
testSuite/fft/source/code/src/: fft.cpp  fft.cu  fftCUDA.cu
testSuite/imageFiltering/source/code/inc/: imageFiltering.h
testSuite/imageFiltering/source/code/src/: imageFiltering.cpp  (+1 more)
testSuite/pageRank/: .gitignore
testSuite/pageRank/scripts/: webGenerator.pl
testSuite/pageRankInvertedIndex/: .gitignore
testSuite/sanity/basic/src/: basic.cpp
testSuite/sanity/simpleTask/src/: basic.cpp  simpleTask.cpp
(+61 files in other folders)
